tests/semantic/invalid/test_assign_string_to_int.src
fn main() -> void {
    int x = "hello";
}